[project]
name = "pyphonixjp"
version = "1.2"
description = "英単語をひらがなでの読みに変換する。詳しくはHomepage(Github)をご覧ください。"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Nanahuse" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Nanahuse/PyPhonixJP"
